--- a/Projects/FRC2023/index.html
+++ b/Projects/FRC2023/index.html
@@ -15,7 +15,7 @@
     
 
     <link rel="stylesheet" href="https://deverellmanning.github.io/CSS/Global.css">
-    <link rel="stylesheet" type="text/css" href="./styel.css" />
+    <link rel="stylesheet" type="text/css" href="./../Assets/CSS/styel.css" />
 </head>
 <body>
     <div class="Sidebar">
@@ -39,7 +39,30 @@
         </section>
 
         <section>
-          <h3>Useful Links:</h3>
+            <h3>Useful Links:</h3>
+            <ul>
+              <!--  <li><a href="">Rep</a> - </li>  -->
+              <li><a href="https://www.firstinspires.org/resource-library/frc/competition-manual-qa-system">Official FRC 2023 Season Materials</a></li>
+              <li><a href="https://frc3624wiki.readthedocs.io/en/latest/index.html">Team 3624's wiki</a></li>
+              <details open>
+                <summary>WPILib Links</summary>
+                <ul>
+                <li><a href="https://docs.wpilib.org/en/stable/index.html">FRC Control System Index</a> - Super useful, contains tutorials and documentation.  Also WPILib</li>
+                <li><a href="https://docs.wpilib.org/en/stable/docs/software/what-is-wpilib.html">What is WPILib?</a></li>
+                <li><a href="https://docs.wpilib.org/en/stable/docs/software/vscode-overview/wpilib-commands-vscode.html">WPILib Commands in Visual Studio Code</a></li>
+
+                <li><a href="">Rep</a> - </li>
+                </ul>
+              </details>
+
+                <details open>
+                <summary>Documetation for parts we have</summary>
+                <ul>
+                  <li><a href="https://www.revrobotics.com/rev-11-2158/">SPARK MAX Motor Controller</a></li>
+                  <li><a href="">Rep</a> - </li>
+                </ul>
+              </details>
+            </ul>
         </section>
 
         <section class="Footer">
