--- a/Projects/FRC2023/index.html
+++ b/Projects/FRC2023/index.html
@@ -15,7 +15,7 @@
     
 
     <link rel="stylesheet" href="https://deverellmanning.github.io/CSS/Global.css">
-    <link rel="stylesheet" type="text/css" href="./../Assets/CSS/styel.css" />
+    <link rel="stylesheet" type="text/css" href="https://deverellmanning.github.io/Assets/CSS/styel.css" />
 </head>
 <body>
     <div class="Sidebar">
@@ -44,6 +44,7 @@
               <!--  <li><a href="">Rep</a> - </li>  -->
               <li><a href="https://www.firstinspires.org/resource-library/frc/competition-manual-qa-system">Official FRC 2023 Season Materials</a></li>
               <li><a href="https://frc3624wiki.readthedocs.io/en/latest/index.html">Team 3624's wiki</a></li>
+              <li><a href="http://www.team358.org/">Team 358</a> - Another team's website</li>
               <details open>
                 <summary>WPILib Links</summary>
                 <ul>
