--- a/Projects/FRC2023/index.html
+++ b/Projects/FRC2023/index.html
@@ -51,16 +51,18 @@
                 <li><a href="https://docs.wpilib.org/en/stable/index.html">FRC Control System Index</a> - Super useful, contains tutorials and documentation.  Also WPILib</li>
                 <li><a href="https://docs.wpilib.org/en/stable/docs/software/what-is-wpilib.html">What is WPILib?</a></li>
                 <li><a href="https://docs.wpilib.org/en/stable/docs/software/vscode-overview/wpilib-commands-vscode.html">WPILib Commands in Visual Studio Code</a></li>
-
-                <li><a href="">Rep</a> - </li>
                 </ul>
               </details>
 
                 <details open>
                 <summary>Documetation for parts we have</summary>
                 <ul>
+                  <li>Rev Robotics</li>
+                  <li><a href="https://docs.revrobotics.com/docs/rev-ion">List of REV Ion components, some of which we are using.</a></li>
                   <li><a href="https://www.revrobotics.com/rev-11-2158/">SPARK MAX Motor Controller</a></li>
-                  <li><a href="">Rep</a> - </li>
+                  <li><a href="https://docs.revrobotics.com/rev-11-1852/">REV Ion Pneumatic Hub</a></li>
+                  <li><a href="https://docs.revrobotics.com/rev-11-1856/">Radio Power Module</a></li>
+                  <li><a href="https://docs.revrobotics.com/rev-11-1850/">Power Distribution Hub</a></li>
                 </ul>
               </details>
             </ul>
