--- a/Gallery/Gallery.html
+++ b/Gallery/Gallery.html
@@ -38,11 +38,11 @@
 		     
 <b>Welcome to my gallery!</b>
 	
-	This is where <i>you</i> get to watch my drawing skills slowly, and painfull, improve!<br>
-	Have Fun!
+	This is where <i>you</i> get to watch my drawing skills slowly improve.<br>
+  I also post other pictures, like games of chess that I win.
 </p>
 
-<p>
+<!--<p>
 I have tried to fix the gallery problems on other browsers, notably Firefox, but problems may keep occuring.  If you DO have a problem, comment it on this site's <a>suggestion page</a>. Make sure you tell me what browser your using, and exactly WHAT isn't working.
 April Update:  It is working pretty well now.
 	<br>
@@ -50,9 +50,9 @@ Things not working or aren't added yet:
 <ul>
 <li>Discriptions</li>
 </ul>
-</p>
+</p>-->
 	  <p>
-	  <b>Final Note:</b>Some of the pictures/scans are high-res, and can take a long time to load.
+	  <b>Note:</b>Some of the pictures/scans are high-res, and can take a long time to load.
 	  </p>
 <br>
 
@@ -68,6 +68,34 @@ Things not working or aren't added yet:
       <!-- ----- Start Gallery Table ----- -->
       <!-- Row 4 -->
       <div class="Gallery">
+   
+<figure onclick="Zoom2('c18');" id="c18">
+  <img src="./Images/Small/Napoleon_Dynamite_Quote_Book.jpg" alt="">
+  <img src="./t.png" class="tp">
+  <figcaption class="title" title="">Napoleon Dynamite Book</figcaption>
+  <figcaption class="date">February</figcaption>
+</figure>
+
+<figure onclick="Zoom2('c17');" id="c17" title="">
+  <img src="./Images/Small/Boat_Of_A_Million_Years_Book.jpg" alt="">
+  <img src="./t.png" class="tp">
+  <figcaption class="title" title="">Boat of a Million Years</figcaption>
+  <figcaption class="date">February</figcaption>
+</figure>
+
+<figure onclick="Zoom2('c16');" id="c16" title="DM vs Computer">
+  <img src="./Images/Small/Chess_Win_2.jpg" alt="">
+  <img src="./t.png" class="tp">
+  <figcaption class="title" title="">Chess Win #2</figcaption>
+  <figcaption class="date">February</figcaption>
+</figure>
+
+<figure onclick="Zoom2('c15');" id="c15" title="DM vs Computer">
+  <img src="./Images/Small/Chess_Win_1.jpg" alt="">
+  <img src="./t.png" class="tp">
+  <figcaption class="title" title="">Chess Win #1</figcaption>
+  <figcaption class="date">February</figcaption>
+</figure>
 
 	      <figure onclick="Zoom2('c14');" id="c14">
   <img src="./Images/Small/EndOfSchool.png" alt="Time to Draw!">
@@ -78,7 +106,7 @@ Things not working or aren't added yet:
 	      
 <!--
 <figure onclick="Zoom2('c13');" id="c13">
-  <img src="./Images/Small/IUFurryPractice1.jpg" alt="A practice i drew from Imaginativly Unimaginative's Furry Drawing Tutorial.">
+  <img src="./Images/Small/IUFurryPractice1.jpg" alt="A practice i drew from Imagin...">
   <img src="./t.png" class="tp">
   <figcaption class="title" title="">IUAP-1</figcaption>
   <figcaption class="date"></figcaption>
