--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <base href="" target="_blank"/>
 
-    <link rel="stylesheet" href="https://deverellmanning.github.io/CSS/Global.css">
+    <link rel="stylesheet" href="./Assets/CSS/Global.css">
     <link rel="stylesheet" type="text/css" href="./Assets/CSS/styel.css" />
     <script src="https://kit.fontawesome.com/f82bfa79a8.js" crossorigin="anonymous"></script>
     <script src="./Assets/Backgrounds/BGRAND.js"></script>
@@ -22,8 +22,8 @@
 </head>
 <body onload="randBG()">
     <div class="Sidebar">
-	    <div id="output" width="100%">_Output_<br></div>
-        <iframe src="https://deverellmanning.github.io/Utility/Sidebar/Global.html" title="Global Sidebar"></iframe>
+	    <div id="output" width="100%">Sidebar<br></div>
+        <iframe src="./Utility/Sidebar/Global.html" title="Global Sidebar"></iframe>
 
         <div class="Puller">•<br>•<br>•<br></div>
     </div>
@@ -43,14 +43,14 @@
         </section>
 
         <section class="Col2PicRight">
-		<p><b>Hello, and welcome to my website!</b>  I'm <abbr title="Me, the Author">Deverell Manning</abbr>.  Here at my website I am showcasing my humble work to my freinds, peers, and people like you.  I hope it's appreciated!  I have recently udated the styling and pages for 2022.  Let's hope for a great year.  Anyway, go and have fun exploring my website!
+		<p><b>Hello, and welcome to my website!</b>  I'm <abbr title="Me, the Author">Deverell Manning</abbr>.  Here at my website I am showcasing my work to my freinds, peers, and people like you.  I'll be glad if it's appreciated!  I have recently udated the styling and pages for 2022.  Let's hope for a great year.  Anyway, go and have fun exploring my website!
 			<br><span><hi>Vote for <a href="https://www.indiedb.com/games/deep-space-colony" target="_blank">Deep Space Colony in the 2022 Indie of the Year Awards</a></hi></span>
-		  </p><img src=".\Assets\Images\Noim.jpg" width="200px"></img>
+		  </p><img src="./Assets/Images/Noim.jpg" width="200px"></img>
         </section>
 
         <section class="Col2PicLeft">
-		<img src=".\Assets\Images\Noim.jpg" width="200px"></img>
-		<p>Once again, I'm Deverell Manning!  A little bit about me, I dwell near the north-western US.  I'm a member of the Church of Jesus Christ of Latter Day Saints, and a content creator with a website.  I love drawing animals doing people things.  I'm trying hard to use and grow this website to it's full potential, but being busy, it is taking a long time.  My hobbies/intrests include drawing, programming, Interactive Fiction, Model-building, and Minecrafting.  I also enjoy reading, so I'm open to book suggestions.  For those who know, I know C++, HTML/CSS/JS, and CMD fairly well.  Lastly, I am a begining martial artist and lucid dreamer.  For more about me, visit my <a href="./About.html">About Me</a> page.</p>
+		<img src="./Assets/Images/Noim.jpg" width="200px"></img>
+		<p>Once again, I'm Deverell Manning.  A little bit about me, I dwell around the north-west US.  I'm a member of the Church of Jesus Christ of Latter Day Saints, and I may be a content creator with a website.  I love drawing animals doing people things.  I'm trying hard to use and grow this website to it's full potential, but being busy, it is taking a long time.  My hobbies/intrests include drawing, programming, Interactive Fiction, writing, Model-building, and Minecrafting.  I also enjoy reading, so I'm open to book suggestions.  For those who know, I know C++, HTML/CSS/JS, and bash fairly well.  Lastly, I am a beginning tennis player and lucid dreamer.  For more about me, visit my <a href="./About.html">All About</a> page.</p>
        <br><span><a href="https://www.reddit.com/user/deverell_manning"><i class="fab fa-reddit"></i></a>  -  <a><i class="fab fa-discord"></i></a></span>
 	</section>
 		
@@ -81,7 +81,6 @@
   </tr>
   <tr>
     <th>Current Projects</th>
-    <td><a href="">Terrarium*</a></td>
     <td><a href="">HOUSE*</a></td>
     <td><a href="./Projects.html">(All Projects)</a></td>
   </tr>
@@ -111,7 +110,7 @@
             <quote>"That's rough, buddy.<br>-Zuko, Avatar:The Last Airbender"</quote>
             <address><a href="deverellmanning.github.io">deverellmanning.github.io</a></address>
             <br />
-            <hi>Last Updated: 4/15/2022</hi>
+            <hi>Last Updated: 5/2/2023</hi>
 		<a href="http://virmir.com/pg.php" target="_blank">
 		  <img src="http://virmir.com/images/pg.gif" border="0" />
 		</a>
