--- a/Gallery/Gallery.html
+++ b/Gallery/Gallery.html
@@ -13,7 +13,7 @@
   
   <meta name="robots" content="noindex, nofollow"><!--change to all to show up on google -->
 
-  <base src="https://deverellmanning.github.io/Gallery/" href="https://deverellmanning.github.io/Gallery/">
+  <!--<base src="https://deverellmanning.github.io/Gallery/" href="https://deverellmanning.github.io/Gallery/">-->
 
   <link rel="stylesheet" href="deverellmanning.github.io/CSS/Global.css">
   <link rel="stylesheet" type="text/css" href="./../Assets/CSS/styel.css" />
@@ -31,8 +31,8 @@
 
 <section>
     <div class="Title">
-      <h1 title="Should be self explanetory... um, can I have a spell check please?">DM GALLERY</h1>
-      <h3> The place where I show off my creative work!</h3>
+      <h1 title="Should be self explanetory...can I have a spell check please?">DM GALLERY</h1>
+      <h3> The place where I show off my <abbr title="create ~ verb;  1. make or cause to be or to become">creative</abbr> work!</h3>
     </div>
 <p>
 		     
@@ -68,33 +68,40 @@ Things not working or aren't added yet:
       <!-- ----- Start Gallery Table ----- -->
       <!-- Row 4 -->
       <div class="Gallery">
-   
+  
+<figure onclick="Zoom2('c19');" id="c19">
+  <img src="./Images/Small/Eligotextum_House_1.png" alt="">
+  <img src="./t.png" class="tp">
+  <figcaption class="title" title="">HOUSE/Eligotextum</figcaption>
+  <figcaption class="date">April 2023</figcaption>
+</figure>
+
 <figure onclick="Zoom2('c18');" id="c18">
   <img src="./Images/Small/Napoleon_Dynamite_Quote_Book.jpg" alt="">
   <img src="./t.png" class="tp">
   <figcaption class="title" title="">Napoleon Dynamite Book</figcaption>
-  <figcaption class="date">February</figcaption>
+  <figcaption class="date">February 2023</figcaption>
 </figure>
 
 <figure onclick="Zoom2('c17');" id="c17" title="">
   <img src="./Images/Small/Boat_Of_A_Million_Years_Book.jpg" alt="">
   <img src="./t.png" class="tp">
   <figcaption class="title" title="">Boat of a Million Years</figcaption>
-  <figcaption class="date">February</figcaption>
+  <figcaption class="date">February 2023</figcaption>
 </figure>
 
 <figure onclick="Zoom2('c16');" id="c16" title="DM vs Computer">
   <img src="./Images/Small/Chess_Win_2.jpg" alt="">
   <img src="./t.png" class="tp">
   <figcaption class="title" title="">Chess Win #2</figcaption>
-  <figcaption class="date">February</figcaption>
+  <figcaption class="date">February 2023</figcaption>
 </figure>
 
 <figure onclick="Zoom2('c15');" id="c15" title="DM vs Computer">
   <img src="./Images/Small/Chess_Win_1.jpg" alt="">
   <img src="./t.png" class="tp">
   <figcaption class="title" title="">Chess Win #1</figcaption>
-  <figcaption class="date">February</figcaption>
+  <figcaption class="date">February 2023</figcaption>
 </figure>
 
 	      <figure onclick="Zoom2('c14');" id="c14">
