--- a/Projects/P5-Sketches/index.html
+++ b/Projects/P5-Sketches/index.html
@@ -15,7 +15,7 @@
     
 
     <link rel="stylesheet" href="https://deverellmanning.github.io/CSS/Global.css">
-    <link rel="stylesheet" type="text/css" href="./styel.css" />
+    <link rel="stylesheet" type="text/css" href="https://deverellmanning.github.io/Assets/CSS/styel.css" />
 </head>
 <body>
     <div class="Sidebar">
