--- a/Gallery/Gallery.html
+++ b/Gallery/Gallery.html
@@ -68,7 +68,14 @@ Things not working or aren't added yet:
       <!-- ----- Start Gallery Table ----- -->
       <!-- Row 4 -->
       <div class="Gallery">
-  
+ 
+<figure onclick="Zoom2('c20');" id="c20">
+  <img src="./Images/Small/Arina_Ref.png" alt="">
+  <img src="./t.png" class="tp">
+  <figcaption class="title" title="">Arina Refrence</figcaption>
+  <figcaption class="date">September 2023</figcaption>
+</figure>
+ 
 <figure onclick="Zoom2('c19');" id="c19">
   <img src="./Images/Small/Eligotextum_House_1.png" alt="">
   <img src="./t.png" class="tp">
