--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
 
         <section class="Col2PicLeft">
 		<img src="./Assets/Images/Noim.jpg" width="200px"></img>
-		<p>Once again, I'm Deverell Manning.  A little bit about me, I dwell around the north-west US.  I'm a member of the Church of Jesus Christ of Latter Day Saints, and I may be a content creator with a website.  I love drawing animals doing people things.  I'm trying hard to use and grow this website to it's full potential, but being busy, it is taking a long time.  My hobbies/intrests include drawing, programming, Interactive Fiction, writing, Model-building, and Minecrafting.  I also enjoy reading, so I'm open to book suggestions.  For those who know, I know C++, HTML/CSS/JS, and bash fairly well.  Lastly, I am a beginning tennis player and lucid dreamer.  For more about me, visit my <a href="./About.html">All About</a> page.</p>
-       <br><span><a href="https://www.reddit.com/user/deverell_manning"><i class="fab fa-reddit"></i></a>  -  <a><i class="fab fa-discord"></i></a></span>
+		<p>Once again, I'm Deverell Manning.  A little bit about me, I dwell in the western United States.  I'm a member of the Church of Jesus Christ of Latter Day Saints, and I may be a content creator with a website.  I love drawing animals doing people things.  I'm trying hard to use and grow this website to it's full potential, but being busy, it is taking a long time.  My hobbies/intrests include drawing, programming, Interactive Fiction, writing, Model-building, and Minecrafting.  I also enjoy reading, so I'm open to book suggestions.  For those who know, I know C++, HTML/CSS/JS, and bash fairly well.  Lastly, I am a beginning tennis player and lucid dreamer.  For more about me, visit my <a href="./About.html">All About</a> page.</p>
+       <br><span><a href="https://www.reddit.com/user/deverell_manning"><i class="fab fa-reddit"></i></a>  -  <a><i class="fab fa-discord"></i></a>  -  <a href="https://deverellmanning.github.io/Projects/perchance.html">⚄︎</span>
 	</section>
 		
         <section>
@@ -79,9 +79,9 @@
   </tr>
   <tr>
     <th>NEW Pages</th>
+    <td><a href="./Projects/perchance.html">Perchance</a></td>
     <td><a href="./Projects/P5-Sketches/index.html">Projects</a></td>
     <td><a href="./Projects.html">Projects</a></td>
-    <td><a href="./Community.html">Community†</a></td>
   </tr>
   <tr>
     <th>Current Projects</th>
@@ -92,14 +92,15 @@
     <th>Minecraft</th>
     <td><a href="./Topics/Minecraft/">Index</a></td>
   </tr>
-</table> <i>*Coming Soon</i> - <i title="Everything is a minor work in Progress, unless otherwise specified.">†MAJOR Work in Progress</i>
+</table> <i>*Coming Soon</i> - <i title="Everything is a minor work in Progress, unless otherwise specified.">†Work in Progress</i>
 		
 
         </section>
 
 	<section class=Col3PicCent><div><h3>Do You like what I do?</h3><p>If so, please visit my <b><a href="./Community.html">community page!</a></b></p>For:<ul><li>Commisions</li><li>Comments</li><li title="Who'd want to do this?">Donations</li><li>Suggestions</li><li>Feedback</li><li>And More!</li></ul></div>
 
-<div><h3><!-- BEGIN: Powered by Supercounters.com -->
+<div><h3>
+<!-- BEGIN: Powered by Supercounters.com -->
 <center><script type="text/javascript" src="//widget.supercounters.com/ssl/online_t.js"></script><script type="text/javascript">sc_online_t(1612939,"Users Online","170ddb");</script><br><noscript><a href="https://www.supercounters.com/">supercounters.com</a></noscript>
 </center>
 <!-- END: Powered by Supercounters.com --></p></div>
