--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <section class="Col2PicLeft">
 		<img src="./Assets/Images/Noim.jpg" width="200px"></img>
 		<p>Once again, I'm Deverell Manning.  A little bit about me, I dwell in the western United States.  I'm a member of the Church of Jesus Christ of Latter Day Saints, and I may be a content creator with a website.  I love drawing animals doing people things.  I'm trying hard to use and grow this website to it's full potential, but being busy, it is taking a long time.  My hobbies/intrests include drawing, programming, Interactive Fiction, writing, Model-building, and Minecrafting.  I also enjoy reading, so I'm open to book suggestions.  For those who know, I know C++, HTML/CSS/JS, and bash fairly well.  Lastly, I am a beginning tennis player and lucid dreamer.  For more about me, visit my <a href="./About.html">All About</a> page.</p>
-       <br><span><a href="https://www.reddit.com/user/deverell_manning"><i class="fab fa-reddit"></i></a>  -  <a><i class="fab fa-discord"></i></a>  -  <a href="https://deverellmanning.github.io/Projects/perchance.html">⚄︎</span>
+       <br><span><a href="https://www.reddit.com/user/deverell_manning"><i class="fab fa-reddit"></i></a>  -  <a><i class="fab fa-discord"></i></a>  -  <a href="https://deverellmanning.github.io/Projects/perchance.html">⚄︎</a></span>
 	</section>
 		
         <section>
