update October 8th
- Start Farax Group
- update projects
- hide certain things
- update main page
- fix a few things in about page

--- a/About.html
+++ b/About.html
@@ -47,28 +47,36 @@
 <li><a href="#Why">Why did I make it?</a></li>
 <li><a href="#How">How did I make it?</a></li>
 </ul>
-<h3 id="Basic">Basicly:</h3>
-<p>
-First of all: I, Deverell Manning made this website in October 2020 on GitHub pages.
-</p>
-<h3 id="What">What’s on it?</h3>
-<p>
-I am planning on a number of things to be on here:
-</p>
-<ul>
-<li>Some of my projects, like eligotextum.</li>
-<li>Resources and links.</li>
-<li>An art show.</li>
-<li>Public files.</li>
-<li>Pages about Minecraft.</li>
-<li>Info about How I made this site.</li>
-<li>Maybe clubs/ societies info.</li>
-<li>Basically, things I (and my friends) are interested in.</li>
-</ul>
+</section>
+
+<section>
+<h3 id="Basic">Main Idea</h3>
+	<p>
+	First of all: I am Deverell Manning, and I started this website in October 2020 using Github Pages.
+	</p>
+	<h3 id="What">What’s on my website?</h3>
+	<p>
+	I am planning on a number of things to be on here:
+	</p>
+	<ul>
+	<li>My projects, such as EligoTextum/HOUSE.</li>
+	<li>Articles/Essays</li>
+	<li>Resources and links.</li>
+	<li>An art show?</li>
+	<li>Public files.</li>
+	<li>Pages about Minecraft.</li>
+	<li>Info about How I made this site.</li>
+	<li>Maybe clubs/ societies info.</li>
+	<li>Basically, things I (and my friends) are interested in.</li>
+	</ul>
+</section>
+
+<section>
 <h3 id="Who">Who Am I?</h3>
-<p>My name is Deverell Manning.  It’s not my real name, but, on the internet, I go by Deverell Manning.  You don’t need to know my real name, or where I live, or my exact age.  I’m school aged, and live somewhere in the US.  I fulfill the role of a son and brother in my family.  I like to create things, so art, writing, building, programming, etc.  I have learned to program in C++, HTML, CSS, and some JavaScript.  I like to read, and also play video games.  My favorite game is Minecraft.<br><a href="">Learn More</a></p>
+	<p>My name is Deverell Manning.  It’s not my real name, but, on the internet, I go by Deverell Manning.  You don’t need to know my real name, or where I live, or my exact age.  I’m school aged, and live somewhere in the US.  I fulfill the role of a son and brother in my family.  I like to create things, so art, writing, building, programming, etc.  I have learned to program in C++, HTML, CSS, and some JavaScript.  I like to read, and also play video games.  My favorite game is Minecraft.</p>
 
 	<p>If you want to contact me, Soon I will set up a system for that to happen.  I can’t just put my email on the site, because I could get spam then, and I’d rather not.  So, you can wait until I can think of a way.  If you have any ideas, please comment below!</p>
+
 <h3 id="Why">Why did I make this Website?</h3>
 	I made this site for many reasons.  Some are listed, roughly in order of importance:
 <ul>I just wanted to make my own website, for fun.</ul>
@@ -83,10 +91,10 @@ I am planning on a number of things to be on here:
         </section>
 
         <section class="Footer">
-            "<quote>Quote</quote>"
-            <address><a href="">deverellmanning.github.io</a></address>
+            <quote>"Imagine break-dancing penguins sliding down an icy hillside rapping an opera.</quote>
+            <address><a href="deverellmanning.github.io">deverellmanning.github.io</a></address>
             <br />
-            <hi>Last Updated: 1/18/2022</hi>
+            <hi>Last Updated: 10/08/2023</hi>
             <hr />
         </section>
 
