--- a/Projects.html
+++ b/Projects.html
@@ -49,10 +49,10 @@
 		<th>Status</th>
 		<th>Project</th>
 		<th>Description</th>
-		<th><abbr title="Estimated Date for starting the project, finishing the project, or bringing the project out of statis, or past date when it was finished.">Est. Date</abbr></th>
+		<th><abbr title="Estimated Date for starting the project, finishing the project, bringing the project out of statis, or past date when it was finished.">Est. Date</abbr></th>
 	</tr>
 	<tr>
-		<td><i class="fa-solid fa-screwdriver-wrench" title="In-Progress"></td>
+		<td><i class="fa fa-pause-circle" title="Stasis"></td>
 		<td>Exploration Bot #1</td>
 		<td>Drives around taking pictures.</td>
 		<td>??</td>
@@ -60,19 +60,19 @@
 	<tr>
 		<td><i class="fa-regular fa-circle-check" title="Finished"></td>
 		<td>Raspberry Pi Picture Frame</td>
-		<td>Personal Computer/Drawing Tablet/Ambient Music. Yay!!</td>
+		<td>Personal Computer/Drawing Tablet/Ambient Music. Yay!</td>
 		<td>??</td>
 	</tr>
 	<tr>
-		<td><i class="fa-solid fa-screwdriver-wrench" title="In-Progress"></td>
+		<td><i class="fa fa-pause-circle" title="Stasis"></td>
 		<td>Eligotextum</td>
 		<td>Interactive fiction Card Game</td>
 		<td>??</td>
 	</tr>
 	<tr>
-		<td><i class="fa-solid fa-screwdriver-wrench" title="In-Progress"></td>
+		<td><i class="fa fa-pause-circle" title="Stasis"></td>
 		<td>HOUSE</td>
-		<td>File System Based <abbr title="Interactive Fiction">IF</abbr> world</td>
+		<td>File System Based <abbr title="Interactive Fiction">IF</abbr> world. See v1.</td>
 		<td>??</td>
 	</tr>
 	<tr>
@@ -84,13 +84,13 @@
 	<tr>
 		<td><i class="fa fa-pause-circle" title="Stasis"></td>
 		<td>Custom Minecraft Model</td>
-		<td>Using CPM mod.  Hopefully done soon</td>
+		<td>With a custom player model mod.</td>
 		<td>??</td>
 	</tr>
         <tr>
 		<td><i class="fa fa-pause-circle" title="Stasis"></td>
 		<td>Expiriments with gridworld</td>
-		<td>WIP</td>
+		<td>See P5.js sketches.</td>
 		<td>??</td>
 	</tr>
         <tr>
@@ -112,9 +112,9 @@
 <section class="Footer">
 	<img src="./Assets/Images/DMLogo_v1.jpg" />
             <quote>"Couldn't Find a Good Quote Today, so: Sorry!"</quote>
-            <address><a href="">deverellmanning.github.io</a></address>
+            <address><a href="deverellmanning.github.io">deverellmanning.github.io</a></address>
             <br>
-            <hi>Last Updated: 4/13/2022</hi>
+            <hi>Last Updated: 10/08/2023</hi>
             <hr>
         </section></page>
 
