--- a/index.html
+++ b/index.html
@@ -22,9 +22,8 @@
 </head>
 <body onload="randBG()">
     <div class="Sidebar">
-	    <div id="output" width="100%">Sidebar<br></div>
+	<div id="output" width="100%">Sidebar<br></div>
         <iframe src="./Utility/Sidebar/Global.html" title="Global Sidebar"></iframe>
-
         <div class="Puller">•<br>•<br>•<br></div>
     </div>
 
@@ -43,67 +42,101 @@
         </section>
 
         <section class="Col2PicRight">
-		<p><b>Hello, and welcome to my website!</b>  I'm <abbr title="Me, the Author">Deverell Manning</abbr>.  Here at my website I am showcasing my work to my freinds, peers, and people like you.  I'll be glad if it's appreciated!  I have recently udated the styling and pages for 2022.  Let's hope for a great year.  Anyway, go and have fun exploring my website!
 
-		<p><b>Look at the sketches I made with P5.js!</b>
-		<a href="./Projects/P5-Sketches/index.html">To Sketches...</a>
-		</p>
-		  </p><img src="./Assets/Images/Noim.jpg" width="200px"></img>
+<p><b>Greetings, welcome to my site!</b> I'm <abbr title="Me, the Author">Deverell Manning</abbr>,
+and I’m pleased to have you here.  Here at my website I showcase my
+work to my friends, peers, and random people like you.  I appreciate
+the recognition.  I’m looking forward to new things and an exciting
+future.  Let's hope for a big year. Anyway, go and have fun exploring
+my website! 
+
+<br><br>
+<b>Look at the sketches I made with P5.js!</b>
+<a href="./Projects/P5-Sketches/index.html">To Sketches...</a>
+</p>
+
+
+		  <img src="./Assets/Images/Noim.jpg" width="200px"></img>
         </section>
 
-        <section class="Col2PicLeft">
-		<img src="./Assets/Images/Noim.jpg" width="200px"></img>
-		<p>Once again, I'm Deverell Manning.  A little bit about me, I dwell in the western United States.  I'm a member of the Church of Jesus Christ of Latter Day Saints, and I may be a content creator with a website.  I love drawing animals doing people things.  I'm trying hard to use and grow this website to it's full potential, but being busy, it is taking a long time.  My hobbies/intrests include drawing, programming, Interactive Fiction, writing, Model-building, and Minecrafting.  I also enjoy reading, so I'm open to book suggestions.  For those who know, I know C++, HTML/CSS/JS, and bash fairly well.  Lastly, I am a beginning tennis player and lucid dreamer.  For more about me, visit my <a href="./About.html">All About</a> page.</p>
-       <br><span><a href="https://www.reddit.com/user/deverell_manning"><i class="fab fa-reddit"></i></a>  -  <a><i class="fab fa-discord"></i></a>  -  <a href="https://deverellmanning.github.io/Projects/perchance.html">⚄︎</a></span>
+	<section class="Col2PicLeft">
+	    <img src="./Assets/Images/Noim.jpg" width="200px"></img>
+<p>Hey, I'm Deverell Manning.  As you continue to read, I might as well
+tell you more about me.  I'm a christian fox currently living in the western
+United States.  I'm a member of the Church of Jesus Christ of Latter Day Saints,
+and I might be a content creator with a website.  I love drawing animals doing 
+people things.  I'm trying hard to use and grow this website to it's full potential,
+but being busy, it is taking a long time.  My hobbies and intrests include drawing, programming,
+Interactive Fiction, writing, model-building, and minecraft.  I also enjoy reading,
+so I'm open to book suggestions.  I have expeirience in C++, HTML/CSS/JS, bash, and
+some java, fairly well.  I'm also looking into how I can progress my knowlege and skills
+in computer developement.  Lastly, I am a beginning tennis player and lucid dreamer.
+For more about me, visit my <a href="./About.html">About</a> page.
+</p>
+
+	    <br>
+	    <span>
+		<a href="https://www.reddit.com/user/deverell_manning"><i class="fab fa-reddit"></i></a>  -  <a><i class="fab fa-discord"></i></a>  -  <a href="https://deverellmanning.github.io/Projects/perchance.html">⚄︎</a>
+	    </span>
 	</section>
 		
         <section>
-		<h3>Navigation:</h3>
- <table class="Nav-Table">
-  <tr>
-    <th>Main Website Pages</th>
-    <td><a href="./index.html">Index</a></td>
-    <td><a href="./Files/index.html">Files</a></td>
-    <td><a href="./Coming.html">Upcoming</a></td>
-    <td><a href="./news.html">News</a></td>
-    <td><a href="./About.html">About</a></td>
-    <td><a href="./Map.html">Sitemap</a></td>
-  </tr>
-  <tr>
-    <th>Main DM pages</th>
-    <td><a href="./About.html">About Me</a></td>
-    <td><a href="./Gallery/Gallery.html">My Gallery</a></td>
-    <td><a href="./Gallery/Notepad.html">Notepad†</a></td>
-    <td><a href="./Projects.html">Projects</a></td>
-    <td><a href="./Community.html">Community</a></td>
-  </tr>
-  <tr>
-    <th>NEW Pages</th>
-    <td><a href="./Projects/perchance.html">Perchance</a></td>
-    <td><a href="./Projects/P5-Sketches/index.html">Projects</a></td>
-    <td><a href="./Projects.html">Projects</a></td>
-  </tr>
-  <tr>
-    <th>Current Projects</th>
-    <td><a href="">HOUSE*</a></td>
-    <td><a href="./Projects.html">(All Projects)</a></td>
-  </tr>
-  <tr>
-    <th>Minecraft</th>
-    <td><a href="./Topics/Minecraft/">Index</a></td>
-  </tr>
-</table> <i>*Coming Soon</i> - <i title="Everything is a minor work in Progress, unless otherwise specified.">†Work in Progress</i>
-		
-
+	    <h3>Navigation:</h3>
+		<table class="Nav-Table">
+		    <tr>
+			<th>Main Website Pages</th>
+			<td><a href="./index.html">Index</a></td>
+			<td><a href="./Files/index.html">Files</a></td>
+			<td><a href="./Coming.html">Upcoming</a></td>
+			<!--<td><a href="./news.html">News</a></td>-->
+			<td><a href="./About.html">About</a></td>
+			<td><a href="./Map.html">Sitemap</a></td>
+		    </tr>
+		    <tr>
+			<th>Main DM pages</th>
+			<td><a href="./Gallery/Gallery.html">My Gallery</a></td>
+			<td><a href="./Projects.html">Projects</a></td>
+			<td><a href="./About.html">About Me</a></td>
+			<td><a href="./Gallery/Notepad.html">Notepad†</a></td>
+			<td><a href="./Community.html">Community</a></td>
+		    </tr>
+		    <tr>
+			<th>NEW Pages</th>
+			<td><a href="./Projects/perchance.html">Perchance</a></td>
+			<td><a href="./Projects/P5-Sketches/index.html">P5.JS sketches</a></td>
+			<td><a href="./Projects.html">Projects</a></td>
+		    </tr>
+		    <tr>
+			<th>Current Projects</th>
+			<!--<td><a href="">HOUSE*</a></td>-->
+			<td><a href="./Projects.html">(All Projects)</a></td>
+		    </tr>
+		    <tr>
+			<th>Minecraft</th>
+			<td><a href="./Topics/Minecraft/">Index</a></td>
+		    </tr>
+		</table>
+		<i>*Coming Soon</i> - <i title="Everything is a minor work in Progress, unless otherwise specified.">†Work in Progress</i>
         </section>
 
-	<section class=Col3PicCent><div><h3>Do You like what I do?</h3><p>If so, please visit my <b><a href="./Community.html">community page!</a></b></p>For:<ul><li>Commisions</li><li>Comments</li><li title="Who'd want to do this?">Donations</li><li>Suggestions</li><li>Feedback</li><li>And More!</li></ul></div>
+	<section class=Col3PicCent>
+	    <div>
+		<h3>Do You like what I do?</h3>
+		<p>If so, please visit my <b><a href="./Community.html">community page!</a></b>
+		    <b></b>For:<ul><li>Commisions</li><li>Comments</li><li title="Who'd want to do this?">Donations</li><li>Suggestions</li><li>Feedback</li><li>And More!</li></ul>
+		</p>
+	    </div>
 
-<div><h3>
-<!-- BEGIN: Powered by Supercounters.com -->
-<center><script type="text/javascript" src="//widget.supercounters.com/ssl/online_t.js"></script><script type="text/javascript">sc_online_t(1612939,"Users Online","170ddb");</script><br><noscript><a href="https://www.supercounters.com/">supercounters.com</a></noscript>
-</center>
-<!-- END: Powered by Supercounters.com --></p></div>
+	    <div>
+		<h3>
+		    <!-- BEGIN: Powered by Supercounters.com -->
+		    <center>
+			<script type="text/javascript" src="//widget.supercounters.com/ssl/online_t.js"></script><script type="text/javascript">sc_online_t(1612939,"Users Online","170ddb");</script><br><noscript><a href="https://www.supercounters.com/">supercounters.com</a></noscript>
+		    </center>
+		    <!-- END: Powered by Supercounters.com -->
+		</h3>
+	    </div>
+
 
 <div><h3></h3><p></p></div>
 
