Update Dallen's About Me Webpage.html
Hide personal info
this page should really be deleted

--- a/Dallen's About Me Webpage.html
+++ b/Dallen's About Me Webpage.html
@@ -333,7 +333,7 @@
 <h1 align="CENTER" style="background: #00cc33"><font color="#eeeeee"><u><font face="Arial, sans-serif"><font size="7"><b>About
 Dallen</b></font></font></u> </font>
 </h1>
-<div id="Section1" dir="LTR">
+<!--<div id="Section1" dir="LTR">
 	<h1 class="heading-2-western">Basic Info</h1>
 	<table width="591" border="1" bordercolor="#1c1c1c" cellpadding="4" cellspacing="0">
 		<colgroup><col width="155">
@@ -402,7 +402,7 @@ Dallen</b></font></font></u> </font>
 	</tbody></table>
 	<p><br><br>
 	</p>
-</div>
+</div>-->
 <div id="Section2" dir="LTR">
 	<p style="margin-bottom: 0in"><a href="https://padlet.com/scarns/jyl0erw9oax57gbf">Padlet</a></p>
 </div>
@@ -413,11 +413,11 @@ Dallen Shurtleff. </font>
 <p><font face="Trebuchet MS, sans-serif">I live in Middleton. I went
 to K12 back in First grade, and then we switched to homeschool. In
 5th Grade I went to a Charter school, but then COVID happened. 6th
-Grade was normal until March, as it was for many of you. Eventually
+<!--Grade was normal until March, as it was for many of you. Eventually
 my school went online for a while, but it was extremely hard. When we
 found that this year would be more or less like last year, we
 resorted to the past, and went back to K12. I have 3 sisters. The
-youngest is Rose, and shes a year old. Lydia is 8, and Madison is 14.
+youngest is Rose, and shes a year old. Lydia is 8, and Madison is 14.-->
 </font>
 </p>
 <h3 class="western" style="margin-top: 0.01in; margin-bottom: 0.12in">
@@ -428,13 +428,13 @@ using OpenGL. I like archery. I play the Clarinet, and I'm learning
 to play the Bodhran (Irish Drum) I like making and playing games. I
 make them in a variety of ways, like Programming them, or
 role-playing games. I like Drawing and Writing, and I want to learn
-to compose music. All this helps me make the games I was talking
+to compose music. <!--All this helps me make the games I was talking
 about earlier. I Play Minecraft, and Roblox. Minecraft is definitely
 my favorite game. Mostly on the internet, I call myself Deverell
 Manning, which is basically the other version of myself. My Minecraft
 Username is, therefore, DeverellManning. I also went hiking overnight
 for the first time about 2 weeks ago. I've went camping before, but
-not hiking. I am excited to have school this year, and meet new
+not hiking.--> I am excited to have school this year, and meet new
 people. If I meet any of you in Minecraft, that would be great.</font>
 </p>
 <div id="Section3" dir="LTR">
@@ -446,8 +446,8 @@ people. If I meet any of you in Minecraft, that would be great.</font>
 	
 </div>
 <p><span id="Frame1" dir="LTR" style="float: left;  border: none; padding: 0in; background: #9999ff">
-	</span></p><p style="margin-top: 0.08in; margin-bottom: 0.08in"><img src="rsz_dsc00861.jpg" name="graphics1" align="LEFT" width="732" height="488" border="0"><br clear="LEFT"><font size="3"><i>Illustration
-	2: Me Hiking with Siblings</i></font></p>
+	</span></p><p style="margin-top: 0.08in; margin-bottom: 0.08in"><img src="" name="graphics1" align="LEFT" width="732" height="488" border="0"><br clear="LEFT"><font size="3"><i>Illustration
+	<!--2: Me Hiking with Siblings</i>--></font></p>
 <br><br>
 <p></p>
 
