--- a/Gallery/Gallery.html
+++ b/Gallery/Gallery.html
@@ -74,6 +74,7 @@ Things not working or aren't added yet:
   <img src="./t.png" class="tp">
   <figcaption class="title" title="">Arina Refrence</figcaption>
   <figcaption class="date">September 2023</figcaption>
+  <div>Drawn using Krita and XPen tablet.</div>
 </figure>
  
 <figure onclick="Zoom2('c19');" id="c19">
@@ -102,6 +103,7 @@ Things not working or aren't added yet:
   <img src="./t.png" class="tp">
   <figcaption class="title" title="">Chess Win #2</figcaption>
   <figcaption class="date">February 2023</figcaption>
+  <div>DM vs Computer</div>
 </figure>
 
 <figure onclick="Zoom2('c15');" id="c15" title="DM vs Computer">
@@ -109,6 +111,7 @@ Things not working or aren't added yet:
   <img src="./t.png" class="tp">
   <figcaption class="title" title="">Chess Win #1</figcaption>
   <figcaption class="date">February 2023</figcaption>
+  <div>DM vs Computer</div>
 </figure>
 
 	      <figure onclick="Zoom2('c14');" id="c14">
@@ -116,6 +119,7 @@ Things not working or aren't added yet:
   <img src="./t.png" class="tp">
   <figcaption class="title">School's(Finally) Over!</figcaption>
   <figcaption class="date">6/9/2022</figcaption>
+  <div>Featuring Delta.</div>
 </figure>
 	      
 <!--
@@ -140,6 +144,7 @@ Things not working or aren't added yet:
   <figcaption class="title">Quizicall</figcaption>
   <div class="disc"></div>
   <figcaption class="date" title="AROUND this time.  Upload date:">11/13/2021</figcaption>
+  <div>Uploaded 11/13/2021.<br></div>
 </figure>
 
 <figure onclick="Zoom2('c10');" id="c10">
@@ -154,7 +159,7 @@ Things not working or aren't added yet:
   <img src="./Images/Small/rabbit.jpg" alt="description">
   <img src="./t.png" class="tp">
   <figcaption class="title">Late For Class?</figcaption>
-  <div class="disc"></div>
+  <div class="disc">3</div>
   <figcaption  class="date">11/15/2021</figcaption>
 </figure>
 
@@ -164,7 +169,7 @@ Things not working or aren't added yet:
   <img src="./Images/Small/Scan2021-11-12_204731_003.jpg" alt="description">
   <img src="./t.png" class="tp">
   <figcaption class="title">Bit of Rule Ideas</figcaption>
-  <div class="disc"></div>
+  <div class="disc">1</div>
   <figcaption class="date"></figcaption>
 </figure>
 
@@ -172,18 +177,18 @@ Things not working or aren't added yet:
   <img src="./Images/Small/Scan2021-11-12_204731_006.jpg" alt="description">
   <img src="./t.png" class="tp">
   <figcaption class="title">Story Page</figcaption>
-  <div class="disc"></div>
+  <div class="disc">2</div>
   <figcaption class="date"></figcaption>
 </figure>
 
 <figure onclick="Zoom2('c6');" id="c6">
   <img src="./Images/Small/Housepets.jpg" alt="description">
   <img src="./t.png" class="tp">
-  <figcaption class="title">Zach (from Housepets!)</figcaption>
-  <div class="disc"></div>
+  <figcaption class="title">Zach</figcaption>
+  <div class="disc"> From Housepets! webcomic.</div>
   <figcaption class="date"></figcaption>
 </figure>
-
+<!--
 <figure onclick="Zoom2('c5');" id="c5">
   <img src="./Images/Small/Scan2021-11-12_204731_002.jpg" alt="description">
   <img src="./t.png" class="tp">
@@ -191,7 +196,7 @@ Things not working or aren't added yet:
   <div class="disc"></div>
   <figcaption class="date"></figcaption>
 </figure
-
+-->
 		
 
 <hr style="height:70px">
@@ -206,7 +211,7 @@ Things not working or aren't added yet:
 <br>
 -Aang, 'Avatar: The Last Airbender'.
 </div>
-  <span style=""><hi>Last Updated: 4/29/2022</hi> - <a href="https://deverellmanning.github.io/"><address>deverellmanning.github.io</address></a></span>
+  <span style=""><hi>Last Updated: 10/08/2023</hi> - <a href="https://deverellmanning.github.io/"><address>deverellmanning.github.io</address></a></span>
 	<a href="http://virmir.com/pg.php" target="_blank">
 		  <img src="http://virmir.com/images/pg.gif" border="0" />
 		</a>
@@ -228,7 +233,7 @@ Things not working or aren't added yet:
 <div class="Extra" style="display:block">
   <!-- The expanding image container -->
       <div class="container" style="display: none;">
-	<div style="width:100%;height:100%; position:relative; top:0;left:0; background:#00000099; z-index:20;"></div>
+	<div class="darkbg"></div>
         <!-- Close the image -->
         <span onclick="Close(this);" class="closebtn">X</span>
 
